--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-number-format": "^5.3.4",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
