--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -1,17 +1,35 @@
-#Dockerfile para la creación de la imagen de la App React
+#Dockerfile to create a production image of the react app
 
-#Eligo una imagen base, en este caso node 20.12.2
-FROM node:20.12.2-bookworm-slim
+# Base image selection, I'm using the node image with the version 20.12.2-bookworm-slim because it has a good balance between size and compatibility
+FROM node:20.12.2-bookworm-slim as BUILD_IMAGE
 
+# Set the working directory to /usr/src/app
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-#Primero hago la copia del package.json únicamente para que este paso se guarde en cache y no se ejecute cada vez que se modifique un archivo
+
+# Copy the current directory contents into the container at /usr/src/app
+# It is a good practice to copy the package.json and package-lock.json files first, so that the npm install command can be cached
 COPY package*.json ./
 RUN npm install
-#Luego copio el resto de los archivos
+
+# Copy the rest of the application code
 COPY . .
 
-EXPOSE 3000
+# Create a production build
+RUN npm run build
 
-#Arranco el servidor
-CMD ["npm", "run", "start"]
+# Create a new image with the production build
+FROM node:20.12.2-bookworm-slim as PRODUCTION_IMAGE
+
+# Set the working directory to /usr/src/app and copy the production build
+WORKDIR /usr/src/app
+COPY --from=BUILD_IMAGE /usr/src/app/dist/ /usr/src/app/dist/
+
+# Install the necesary packages to serve the production build
+COPY package.json ./
+COPY vite.config.ts ./
+RUN npm install typescript
+
+# Expose the port 3000 and run the preview command
+EXPOSE 3000
+CMD ["npm", "run", "preview"]
