--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-number-format": "^5.3.4",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
